--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<link href="css/styles.css" rel="stylesheet">
    <title>Ghana Akan Name</title>
    </head>
   <body>
-    <h1>Akan Name</h1>
+    <h1>What is your Akan Name?</h1>
     <script src="js/scripts.js"></script>
     <label for="birthday">Birthday: </label>
        <p><input type="date" id="birthday" name="birthday"></p> 
