--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 <link href="css/styles.css" rel="stylesheet">
    <title>Ghana Akan Name</title>
    </head>
   <body>
+    <div class="container">
+    <div class="page-header">
     <h1>What is your Akan Name?</h1>
-    <script src="js/scripts.js"></script>
+    </div>
+    <div class="jumbotron">
+    <div class="row">
+      <div class="col-md-10">
     <label for="birthday">Birthday: </label>
        <p><input type="date" id="birthday" name="birthday"></p> 
         <p><input type="radio" id="male" name="gender" value="male">
@@ -18,5 +22,10 @@
         <p>The Akan people are found in present day Ghana.The Akan name their children according to the day they were born. The name given is also based on the gender of the child. Here you will be able to know your Akan name based on the day you were born!!</p>
 
         <p>For more interesting facts about the naming ceremony of the Akan people visit<a href="https://en.wikipedia.org/wiki/Outdooring#:~:text=In%20Ghana%2C%20an%20Outdooring%20(Ga,the%20child%20a%20day%20name."> wikipedia</a>. </p>
+       </div>
+      </div>
+    </div>
+      </div>
+        <script src="js/scripts.js"></script>
   </body>
 </html>
