add id result to initial.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
            <label for="female">Female</label><br></p>
            <button type=submit>submit</button>
         </form>
+        <p id="result"></p>
+        
     
         <p>The Akan people are found in present day Ghana.The Akan name their children according to the day they were born. The name given is also based on the gender of the child. Here you will be able to know your Akan name based on the day you were born!!</p>
 
