--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
     <div class="page-header">
-    <h1>What is your Akan Name?</h1>
+    <h1>Akan name</h1>
     </div>
 
     <div class="jumbotron">
