add images to initial hrml

--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
       </div>
     </div>
       </div>
-    
+    <img src="images/kitenge.jpeg" alt="a beautiful picture of kitenge"
   </body>
 </html>
