remove jumbotron from index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Akan name</h1>
     </div>
 
-    <div class="jumbotron">
+
     <div class="row">
       <div class="col-md-10">
         <form name="form" onsubmit="event.preventDefault(); submitStaff()">
@@ -33,9 +33,8 @@
 
         <p>For more interesting facts about the naming ceremony of the Akan people visit<a href="https://en.wikipedia.org/wiki/Outdooring#:~:text=In%20Ghana%2C%20an%20Outdooring%20(Ga,the%20child%20a%20day%20name."> wikipedia</a>. </p>
        </div>
-      </div>
     </div>
       </div>
-    <img src="images/kitenge.jpeg" alt="a beautiful picture of kitenge"
+    <img src="images/kitenge.jpeg" alt="a beautiful picture of kitenge">
   </body>
 </html>
