change of image in css

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
        </div>
     </div>
       </div>
-    <img src="images/kitenge.jpeg" alt="a beautiful picture of kitenge">
+    <img src="images/kitenge.jpeg" alt="a beautiful picture of a kitenge">
   </body>
 </html>
