--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
         <p>The Akan people are found in present day Ghana.The Akan name their children according to the day they were born. The name given is also based on the gender of the child. Here you will be able to know your Akan name based on the day you were born!!</p>
 
-        <p>During the naming ceremony, the child is handed over to the elders of the clan who pour libation to the ancestors before the child is given a name according to the day they were born.Sacred beads are placed on the child's head and clay marks specifically for this ceremony are applied on the child and mother.</p>
+        <p>During the naming ceremony, the child is handed over to the elders of the clan who pour libation to the ancestors before the child is given a name according to the day they were born.Sacred beads are placed on the child's head and clay marks specifically for this ceremony are applied on the child and mother. This tradition was carried out for years. THe child was named after seven days of them being born. The Akan people waited seven days because they believed that after seven days of the child being alive they had come to be part of the community forever.</p>
 
         <p>For more interesting facts about the naming ceremony of the Akan people visit<a href="https://en.wikipedia.org/wiki/Outdooring#:~:text=In%20Ghana%2C%20an%20Outdooring%20(Ga,the%20child%20a%20day%20name."> wikipedia</a>. </p>
        </div>
