--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
    <script src="js/scripts.js"></script>
    </head>
   <body>
+   
     <div class="container">
     <div class="page-header">
     <h1>Akan name</h1>
     </div>
+    <img src="images/Akan.jpg" alt="a picture of Akan naming ceremony"width="500" height="600">
 
 
     <div class="row">
@@ -35,6 +37,6 @@
        </div>
     </div>
       </div>
-    <img src="images/kitenge.jpeg" alt="a beautiful picture of a kitenge">
+      
   </body>
 </html>
